tests/models/struct/unnamed/i64/pass/ge.rs
use dade::model;
#[model]
struct TestModel (
   #[field(ge = 2)]
    i64
);
fn main() {}
